--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@inrupt/solid-client": "^1.17.0",
     "@inrupt/solid-client-authn-browser": "^1.11.2",
     "@inrupt/vocab-common-rdf": "^1.0.3",
+    "@inrupt/vocab-solid": "^1.0.3",
     "buffer": "^6.0.3",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
