--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@angular/core": "~13.1.0",
     "@angular/forms": "~13.1.0",
     "@angular/material": "^13.1.0",
+    "@angular/material-moment-adapter": "^13.1.1",
     "@angular/platform-browser": "~13.1.0",
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
@@ -25,6 +26,7 @@
     "@inrupt/vocab-common-rdf": "^1.0.3",
     "@inrupt/vocab-solid": "^1.0.3",
     "buffer": "^6.0.3",
+    "moment": "^2.29.1",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
