--- a/package.json
+++ b/package.json
@@ -13,16 +13,16 @@
     "@angular/animations": "~13.1.0",
     "@angular/cdk": "^13.1.0",
     "@angular/common": "~13.1.0",
-    "@angular/compiler": "~13.1.0",
-    "@angular/core": "~13.1.0",
-    "@angular/forms": "~13.1.0",
-    "@angular/material": "^13.1.0",
+    "@angular/compiler": "^13.1.1",
+    "@angular/core": "^13.1.1",
+    "@angular/forms": "^13.1.1",
+    "@angular/material": "^13.1.1",
     "@angular/material-moment-adapter": "^13.1.1",
-    "@angular/platform-browser": "~13.1.0",
-    "@angular/platform-browser-dynamic": "~13.1.0",
-    "@angular/router": "~13.1.0",
+    "@angular/platform-browser": "^13.1.1",
+    "@angular/platform-browser-dynamic": "^13.1.1",
+    "@angular/router": "^13.1.1",
     "@inrupt/solid-client": "^1.17.0",
-    "@inrupt/solid-client-authn-browser": "^1.11.2",
+    "@inrupt/solid-client-authn-browser": "^1.11.3",
     "@inrupt/vocab-common-rdf": "^1.0.3",
     "@inrupt/vocab-solid": "^1.0.3",
     "buffer": "^6.0.3",
@@ -32,17 +32,17 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.1.1",
-    "@angular/cli": "~13.1.1",
-    "@angular/compiler-cli": "~13.1.0",
-    "@types/jasmine": "~3.10.0",
+    "@angular-devkit/build-angular": "^13.1.2",
+    "@angular/cli": "^13.1.2",
+    "@angular/compiler-cli": "^13.1.1",
+    "@types/jasmine": "^3.10.3",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.10.0",
-    "karma": "~6.3.0",
+    "karma": "^6.3.10",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~4.5.2"
+    "typescript": "^4.5.4"
   }
 }
